// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendModal disables sending if not connected 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Send
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-denomination"
      >
        Denomination
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-denomination"
          readonly="readonly"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-address"
      >
        Send To
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-address"
          placeholder="Address"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-amount"
      >
        Amount
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-amount"
          max="2300"
          min="1"
          placeholder="Amount"
          type="number"
        />
         
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="password"
      >
        Password
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </div>
    </div>
     
  </div>
   
  <div
    class="action-modal-footer"
  >
    <div>
      <button
        class="tm-btn"
        disabled="disabled"
      >
        <span
          class="tm-btn__container tm-btn--primary"
        >
          <!---->
          <span
            class="tm-btn__value"
          >
            Connecting...
          </span>
        </span>
      </button>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`SendModal has the expected html structure 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Send
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-denomination"
      >
        Denomination
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-denomination"
          readonly="readonly"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-address"
      >
        Send To
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-address"
          placeholder="Address"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-amount"
      >
        Amount
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-amount"
          max="2300"
          min="1"
          placeholder="Amount"
          type="number"
        />
         
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="password"
      >
        Password
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </div>
    </div>
     
  </div>
   
  <div
    class="action-modal-footer"
  >
    <div>
      <button
        class="tm-btn"
        disabled="disabled"
        id="send-btn"
      >
        <span
          class="tm-btn__container tm-btn--primary"
        >
          <!---->
          <span
            class="tm-btn__value"
          >
            Send Tokens
          </span>
        </span>
      </button>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`SendModal should show address required error 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Send
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-denomination"
      >
        Denomination
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-denomination"
          readonly="readonly"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-address"
      >
        Send To
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-address"
          placeholder="Address"
          type="text"
        />
         
        <div
          class="tm-form-msg sm tm-form-msg--error"
        >
          Address is required
        </div>
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-amount"
      >
        Amount
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-amount"
          max="0"
          min="0"
          placeholder="Amount"
          type="number"
        />
         
        <!---->
         
        <div
          class="tm-form-msg sm tm-form-msg--error"
        >
          Amount must be between 0 and 0
        </div>
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="password"
      >
        Password
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </div>
    </div>
     
  </div>
   
  <div
    class="action-modal-footer"
  >
    <div>
      <button
        class="tm-btn"
        disabled="disabled"
        id="send-btn"
      >
        <span
          class="tm-btn__container tm-btn--primary"
        >
          <!---->
          <span
            class="tm-btn__value"
          >
            Send Tokens
          </span>
        </span>
      </button>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`SendModal should show bech32 error when address length is too long 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Send
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-denomination"
      >
        Denomination
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-denomination"
          readonly="readonly"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-address"
      >
        Send To
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-address"
          placeholder="Address"
          type="text"
        />
         
        <div
          body="No separator character for asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
          class="tm-form-msg sm tm-form-msg--error"
        >
          Address is invalid bech32
        </div>
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-amount"
      >
        Amount
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-amount"
          max="2300"
          min="1"
          placeholder="Amount"
          type="number"
        />
         
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="password"
      >
        Password
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </div>
    </div>
     
  </div>
   
  <div
    class="action-modal-footer"
  >
    <div>
      <button
        class="tm-btn"
        disabled="disabled"
        id="send-btn"
      >
        <span
          class="tm-btn__container tm-btn--primary"
        >
          <!---->
          <span
            class="tm-btn__value"
          >
            Send Tokens
          </span>
        </span>
      </button>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`SendModal should show bech32 error when address length is too short 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Send
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-denomination"
      >
        Denomination
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-denomination"
          readonly="readonly"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-address"
      >
        Send To
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-address"
          placeholder="Address"
          type="text"
        />
         
        <div
          body="asdf too short"
          class="tm-form-msg sm tm-form-msg--error"
        >
          Address is invalid bech32
        </div>
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-amount"
      >
        Amount
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-amount"
          max="2300"
          min="1"
          placeholder="Amount"
          type="number"
        />
         
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="password"
      >
        Password
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </div>
    </div>
     
  </div>
   
  <div
    class="action-modal-footer"
  >
    <div>
      <button
        class="tm-btn"
        disabled="disabled"
        id="send-btn"
      >
        <span
          class="tm-btn__container tm-btn--primary"
        >
          <!---->
          <span
            class="tm-btn__value"
          >
            Send Tokens
          </span>
        </span>
      </button>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`SendModal should show bech32 error when alphanumeric is wrong 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
    <span
      class="action-modal-title"
    >
      Send
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-denomination"
      >
        Denomination
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-denomination"
          readonly="readonly"
          type="text"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-address"
      >
        Send To
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-address"
          placeholder="Address"
          type="text"
        />
         
        <div
          class="tm-form-msg sm tm-form-msg--error"
        >
          Address is required
        </div>
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-amount"
      >
        Amount
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="send-amount"
          max="2300"
          min="1"
          placeholder="Amount"
          type="number"
        />
         
        <div
          class="tm-form-msg sm tm-form-msg--error"
        >
          Amount is required
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="password"
      >
        Password
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <!---->
      </div>
    </div>
     
  </div>
   
  <div
    class="action-modal-footer"
  >
    <div>
      <button
        class="tm-btn"
        disabled="disabled"
        id="send-btn"
      >
        <span
          class="tm-btn__container tm-btn--primary"
        >
          <!---->
          <span
            class="tm-btn__value"
          >
            Send Tokens
          </span>
        </span>
      </button>
    </div>
     
    <!---->
  </div>
</div>
`;
